--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
-    "vuejs-datepicker": "^1.6.2"
-  },
-  "devDependencies": {
+    "vuejs-datepicker": "^1.6.2",
     "@vue/cli-plugin-babel": "~4.2.0",
     "@vue/cli-plugin-eslint": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
+  },
+  "devDependencies": {
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
